Memory leak in NetworkInfoClient https://bugs.webkit.org/show_bug.cgi?id=86603

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-05-17
Reviewed by Adam Barth.

Source/WebCore:

Fix a memory leak in NetworkInfoClient by using OwnPtr and
change the class not to inherite from RefCounted.

* Modules/networkinfo/NetworkInfoClient.h:

Source/WebKit/efl:

Fix a memory leak in NetworkInfoClient by using OwnPtr and making
the client to be owned by the View.

* ewk/ewk_view.cpp:
(_Ewk_View_Private_Data):
(_ewk_view_priv_new):

Canonical link: https://commits.webkit.org/104419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117515 268f45cc-cd09-0410-ab3c-d52691b4dbfc